# experiments

./: .gitignore
lua-modules/: o2module.lua
lua-o2sys/: o2sys.lua
lua-o2sys/o2sys/: class.lua
lua_modules/: test.lua  user.lua
polymorphism01/: test.cxx
swig-cmake-lua/: .gitignore  CMakeLists.txt
swig-cmake-lua-0.0/: CMakeLists.txt
swig-cmake-lua-0.0/src/: prog.lua  vec.cxx  vec.h  vec.i
swig-cmake-lua/src/: prog.lua
swig-lua-functions/: CMakeLists.txt
swig-lua-functions/buildinfo/: UseSWIG.cmake
swig-lua-functions/scripts/: prog.lua
swig-lua-functions/src/: main.cxx
swig-lua-functions/src/core/: core.i  vec.cxx  vec.h
swig-lua-functions/src/function/: caller.h  handler.h
swig-lua-functions/src/lua/: func.h  state.cxx  state.h
swig-lua-functions/src/swig/: type.h
virtual/: build.sh  test.cxx
